fix: commit pending improvements from earlier sessions
- FIFA-standard recursive H2H tiebreaker in BracketResolver
- Tests for H2H tiebreaker scenarios
- Removed MATCH_BUFFER_HOURS (3h delay), reduced poll to 60s
- Preserve 'Solo pendientes' filter after prediction submit
- liveScores now updates data-active for filter on match finish